# waterly

./: .gitignore  LICENSE  README.md  gpy.sh  manifest.ps1  pyproject.toml
docs/: Box_Placement.jxl  Final_Assembly.jxl  IMG_9648.HEIC  IMG_9649.HEIC  IMG_9650.HEIC  IMG_9651.HEIC  IMG_9652.HEIC  IMG_9653.HEIC  IMG_9654.HEIC  IMG_9655.HEIC  IMG_9656.HEIC  IMG_9657.HEIC  IMG_9658.HEIC  IMG_9659.HEIC  IMG_9660.HEIC  IMG_9661.HEIC  IMG_9662.HEIC  IMG_9663.HEIC  IMG_9664.HEIC  PC817_Opto_Description.txt  Power_Opto.jxl  Power_Opto_Back.jxl  Power_RPI_BoxPlace.jxl  RPI_BoxPlace.jxl  RPI_GPIO_Water_Sensor.jxl  RS485_Sensors.jxl  Valves_Control.jxl  WaterSensor.jxl
frontend/: build.ps1  package-lock.json  package.json
frontend/public/: index.html
frontend/public/api/: groups.json  manifest  sensors.json
frontend/public/api/latest/: sensors
frontend/src/: App.jsx  index.js
frontend/src/api/: manifest.js  sensors.js
frontend/src/components/: GroupedSensorChart.jsx  MultiSensorChart.jsx  SensorTrendCard.jsx
src/waterly/: __init__.py  config.py  log.py  main.py  patch.py  pulses.py  queues.py  scheduler.py  storage.py  trend.py  weather.py  web.py
src/waterly/db/: core_v1.0.1.sql  ddl_v1.0.0.sql  vweather_v1.0.2.sql
src/waterly/dfrobot/: __init__.py  base_sensor.py  sen0604.py  sen0605.py
src/waterly/json/: serialization.py  times.py
src/waterly/model/: measurement.py  times.py  trend.py  units.py  weather_data.py  zone.py
src/web/static/: asset-manifest.json  garden.css  index.html  manifest.json
src/web/static/js/: main.0df6c5ef.js  main.0df6c5ef.js.map  (+4 more)
src/web/tmpl/: index.html
tests/: Relay.py
